proyecto/estaciones/k8s/estaciones-api-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: estaciones-api
spec:
  replicas: 1
  selector:
    matchLabels:
      app: estaciones-api
  template:
    metadata:
      labels:
        app: estaciones-api
    spec:
      containers:
        - name: estaciones-api
          image: isi3/estaciones-api:latest
          ports:
            - containerPort: 9091
