proyecto/estaciones/k8s/estaciones-api-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: estaciones-api
  labels:
    app: estaciones-api
spec:
  type: NodePort
  ports:
    - port: 9091
      targetPort: 9091
      nodePort: 30097  
  selector:
    app: estaciones-api
