proyecto/estaciones/k8s/mongodb-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: estaciones-mongodb
spec:
  clusterIP: None # Headless service
  selector:
    app: estaciones-mongodb
  ports:
    - protocol: TCP
      port: 27017
      targetPort: 27017
