proyecto/estaciones/k8s/mysql.yaml
apiVersion: apps/v1
kind: StatefulSet
metadata:
  name: estaciones-mysql
spec:
  serviceName: estaciones-mysql
  replicas: 1
  selector:
    matchLabels:
      app: estaciones-mysql
  template:
    metadata:
      labels:
        app: estaciones-mysql
    spec:
      containers:
        - name: mysql
          image: mysql:8.0
          ports:
            - containerPort: 3306
          volumeMounts:
            - name: mysql-persistent-storage
              mountPath: /var/lib/mysql
            - name: mysql-initdb
              mountPath: /docker-entrypoint-initdb.d
      volumes:
        - name: mysql-initdb
          configMap:
            name: estaciones-mysql-initdb
  volumeClaimTemplates:
    - metadata:
        name: mysql-persistent-storage
      spec:
        accessModes: [ "ReadWriteOnce" ]
        storageClassName: local-storage
        resources:
          requests:
            storage: 1Gi
---
apiVersion: v1
kind: Service
metadata:
  name: estaciones-mysql
spec:
  selector:
    app: estaciones-mysql
  ports:
    - protocol: TCP
      port: 3306
      targetPort: 3306
